<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>TicTacToeMiniMax</artifactId>
    <version>1.0</version>

    <name>tictactoeai</name>
    <description>A simple AI for TicTacToe with Alpha-Beta pruning and binary encoding for the board</description>
    <url>http://datasecs.de</url>
    <inceptionYear>2020</inceptionYear>

    <developers>
        <developer>
            <name>DataSecs</name>
            <email>datasecs@outlook.de</email>
            <url>https://datasecs.de</url>
            <organizationUrl>https://github.com/DataSecs</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>BSD 2-Clause License</name>
            <url>https://www.freebsd.org/copyright/freebsd-license.html</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>

            <!-- Jar packaging -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
        </plugins>
    </build>
</project>